<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="user"
            type="com.dnar.consumerapp.data.model.UserDetail" />

        <variable
            name="placeholder"
            type="com.dnar.consumerapp.data.model.ViewPlaceholder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteSoft">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/profile_btn_back"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:contentDescription="@string/profile_desc_button_back"
                android:scaleType="centerInside"
                android:src="@drawable/ic_all_arrow"
                android:tint="@color/colorWhite" />

            <TextView
                android:id="@+id/profile_toolbar_tittle"
                style="@style/main_tv_actionBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile_profile" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorWhite"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_toolbar"
            app:layout_scrollFlags="scroll|snap">

            <ImageView
                android:id="@+id/profile_img_profile"
                imageUrl="@{user.avatar_url}"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/profile_desc_image_profile" />

            <TextView
                android:id="@+id/profile_tv_name"
                style="@style/profile_tv_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{user.name}"
                android:visibility="@{user.name != null ? View.VISIBLE : View.GONE}"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/profile_tv_username"
                style="@style/profile_tv_subTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@{user.login}"
                android:visibility="@{user.login != null ? View.VISIBLE : View.GONE}"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/profile_tv_company"
                style="@style/profile_tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user_company"
                android:text="@{user.company}"
                android:visibility="@{user.company != null ? View.VISIBLE : View.GONE}"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/profile_tv_location"
                style="@style/profile_tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user_location"
                android:text="@{user.location}"
                android:visibility="@{user.location != null ? View.VISIBLE : View.GONE}"
                tools:visibility="visible" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>